logs/scalr.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/scalr-0.3.66.egg-info'...
Listing './lib/python3.5/site-packages/scalrtools'...
Listing './lib/python3.5/site-packages/scalrtools/api'...
Compiling './lib/python3.5/site-packages/scalrtools/api/client.py'...
***   File "./lib/python3.5/site-packages/scalrtools/api/client.py", line 89
    except URLError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scalrtools/cli.py'...
***   File "./lib/python3.5/site-packages/scalrtools/cli.py", line 69
    print help
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/scalrtools/collections_.py'...
***   File "./lib/python3.5/site-packages/scalrtools/collections_.py", line 92
    print template
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/scalrtools/commands.py'...
***   File "./lib/python3.5/site-packages/scalrtools/commands.py", line 73
    except ScalrAPIError, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scalrtools/config.py'...
***   File "./lib/python3.5/site-packages/scalrtools/config.py", line 63
    except (NoSectionError, NoOptionError), e:
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
